--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         android:textSize="14dp" />
 
     <Button
-        android:id="@+id/btn_downFile"
+        android:id="@+id/btn_download"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -78,7 +78,7 @@
         android:textSize="14dp" />
 
     <Button
-        android:id="@+id/btn_uploadFiles"
+        android:id="@+id/btn_upload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
